--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 91,
-"scroll_position": 72.0,
+"row": 6,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,10 +59,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 55,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -73,12 +73,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 54,
-"scroll_position": 40.0,
-"selection": false,
+"row": 21,
+"scroll_position": 14.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 21,
+"selection_to_column": 31,
+"selection_to_line": 21,
 "syntax_highlighter": "GDScript"
 }
 
@@ -115,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 15,
+"scroll_position": 192.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -129,10 +133,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 52,
+"column": 54,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -143,11 +147,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 83,
-"scroll_position": 45.0,
+"row": 30,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -157,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
+"row": 48,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -171,11 +175,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 151,
-"scroll_position": 105.0,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -213,11 +217,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 24.0,
+"row": 27,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -241,12 +245,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 0.0,
-"selection": false,
+"row": 201,
+"scroll_position": 179.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 196,
+"selection_to_column": 32,
+"selection_to_line": 201,
 "syntax_highlighter": "GDScript"
 }
 
@@ -255,12 +263,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 0.0,
-"selection": false,
+"row": 28,
+"scroll_position": 190.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 27,
+"selection_to_column": 24,
+"selection_to_line": 28,
 "syntax_highlighter": "GDScript"
 }
 
@@ -273,7 +285,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
-"scroll_position": 12.0,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -283,12 +295,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 83,
+"row": 256,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 251,
+"selection_to_column": 32,
+"selection_to_line": 256,
 "syntax_highlighter": "GDScript"
 }
 
