--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,15 +20,15 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://fence.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Music/", "res://Music/SFX/")
+dock_filesystem_selected_paths=PackedStringArray("res://mob3.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Music/SFX/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://tutorial.tscn", "res://level_1.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://Player/sola.tscn", "res://endless.tscn", "res://testroom.tscn", "res://Lamp.tscn", "res://fence.tscn")
+open_scenes=PackedStringArray("res://tutorial.tscn", "res://endless.tscn", "res://testroom.tscn", "res://level_1.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://Player/sola.tscn", "res://mob.tscn", "res://mob2.tscn", "res://mob3.tscn")
 current_scene="res://level_3.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
