--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/SpeedwaySurvival/Exports/Mac/SpeedwaySurvival_Debug_Mac.dmg"
+export_path="../../../Desktop/SpeedwaySurvival/Exports/Mac/SpeedwaySurvival_v1.4.1.dmg"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -113,7 +113,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/SpeedwaySurvival/Exports/Windows/SpeedwaySurvival_Debug_Windows.exe"
+export_path="../../../Desktop/SpeedwaySurvival/Exports/Windows/SpeedwaySurvival_v1.4.1.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
